@@ -31,15 +31,12 @@
 #if ENABLE(INTL)
 
 #include "Error.h"
-#include "IdentifierInlines.h"
 #include "IntlNumberFormatConstructor.h"
 #include "IntlObject.h"
 #include "JSBoundFunction.h"
-#include "JSCJSValueInlines.h"
 #include "JSCellInlines.h"
+#include "JSCInlines.h"
 #include "ObjectConstructor.h"
-#include "SlotVisitorInlines.h"
-#include "StructureInlines.h"
 
 namespace JSC {
 
